crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-math-accents.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Hat: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 6
              },
              "end": {
                "line": 1,
                "column": 20
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\hat{x}"
              }
            ],
            "raw_content": "\\hat{x}"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Bar: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 1,
                "column": 6
              },
              "end": {
                "line": 1,
                "column": 20
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\bar{x}"
              }
            ],
            "raw_content": "\\bar{x}"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Vector: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 3,
            "span": {
              "start": {
                "line": 1,
                "column": 9
              },
              "end": {
                "line": 1,
                "column": 23
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\vec{v}"
              }
            ],
            "raw_content": "\\vec{v}"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Dot: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 4,
            "span": {
              "start": {
                "line": 1,
                "column": 6
              },
              "end": {
                "line": 1,
                "column": 20
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\dot{x}"
              }
            ],
            "raw_content": "\\dot{x}"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Tilde: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 5,
            "span": {
              "start": {
                "line": 1,
                "column": 8
              },
              "end": {
                "line": 1,
                "column": 24
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\tilde{x}"
              }
            ],
            "raw_content": "\\tilde{x}"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
