crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-math-delimiters.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Parentheses: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 14
              },
              "end": {
                "line": 1,
                "column": 45
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\left(\\frac{1}{2}\\right)"
              }
            ],
            "raw_content": "\\left(\\frac{1}{2}\\right)"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Brackets: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 2,
            "span": {
              "start": {
                "line": 1,
                "column": 11
              },
              "end": {
                "line": 1,
                "column": 42
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\left[\\frac{a}{b}\\right]"
              }
            ],
            "raw_content": "\\left[\\frac{a}{b}\\right]"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "Braces: "
          },
          {
            "type": "InlineDirective",
            "directive_id": 3,
            "span": {
              "start": {
                "line": 1,
                "column": 9
              },
              "end": {
                "line": 1,
                "column": 47
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "\\left\\{x \\in \\mathbb{R}\\right\\}"
              }
            ],
            "raw_content": "\\left\\{x \\in \\mathbb{R}\\right\\}"
          },
          {
            "type": "Text",
            "value": "."
          }
        ]
      }
    ]
  },
  "errors": []
}
