crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-math.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The familiar equation "
          },
          {
            "type": "InlineDirective",
            "directive_id": 1,
            "span": {
              "start": {
                "line": 1,
                "column": 23
              },
              "end": {
                "line": 1,
                "column": 38
              }
            },
            "name": "math",
            "content": [
              {
                "type": "Text",
                "value": "E = mc^2"
              }
            ],
            "raw_content": "E = mc^2"
          },
          {
            "type": "Text",
            "value": " appears before the display form."
          }
        ]
      },
      {
        "type": "BlockDirective",
        "directive_id": 2,
        "span": {
          "start": {
            "line": 5,
            "column": 1
          },
          "end": {
            "line": 9,
            "column": 3
          }
        },
        "name": "math",
        "raw_body": "\\int_0^1 x^2 \\, dx = \\frac{1}{3}\nE = mc^2\n\\nabla \\cdot \\vec{F} = 0",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "\\int_0"
              },
              {
                "type": "Superscript",
                "content": [
                  {
                    "type": "Text",
                    "value": "1 x"
                  }
                ]
              },
              {
                "type": "Text",
                "value": "2 \\, dx = \\frac{1}{3}"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "E = mc^2"
              },
              {
                "type": "SoftBreak"
              },
              {
                "type": "Text",
                "value": "\\nabla \\cdot \\vec{F} = 0"
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
