crates/etch-core/tests/snapshots/corpus_tests__extensions-block-directives-multiple.snap
---
source: crates/etch-core/tests/corpus_tests.rs
expression: result
---
{
  "document": {
    "frontmatter": null,
    "body": [
      {
        "type": "BlockDirective",
        "directive_id": 1,
        "span": {
          "start": {
            "line": 3,
            "column": 1
          },
          "end": {
            "line": 5,
            "column": 3
          }
        },
        "name": "aside",
        "raw_body": "First aside block.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "First aside block."
              }
            ]
          }
        ]
      },
      {
        "type": "Paragraph",
        "content": [
          {
            "type": "Text",
            "value": "The station clock chimed between the two side notes."
          }
        ]
      },
      {
        "type": "BlockDirective",
        "directive_id": 2,
        "span": {
          "start": {
            "line": 9,
            "column": 1
          },
          "end": {
            "line": 11,
            "column": 3
          }
        },
        "name": "aside",
        "raw_body": "Second aside block.",
        "body": [
          {
            "type": "Paragraph",
            "content": [
              {
                "type": "Text",
                "value": "Second aside block."
              }
            ]
          }
        ]
      }
    ]
  },
  "errors": []
}
